# ngage-demo

./: CMakeLists.txt  README.md  launch.vs.json
res/: demo.tmx  grass_biome.tsx
src/: core.c  core.h  demo.c  main.c  tiled.c
